- remove db - role shader