@@ -1,19 +1,17 @@
 package com.dmsh.staffhelper.util;
 
-import java.util.Collections;
 import java.util.Map;
 
 public final class NickDecorationsStore {
     private NickDecorationsStore() {}
 
-    private static volatile Map<String, NickDecoration> DECORATIONS = Collections.emptyMap();
+    private static final Map<String, NickDecoration> DECORATIONS = Map.of(
+            "dontimonti", new NickDecoration("\u2605", 0xFFD84D),
+            "werkuk", new NickDecoration("\u2605", 0xFF76C6)
+    );
 
     public static Map<String, NickDecoration> get() {
         return DECORATIONS;
-    }
-
-    public static void set(Map<String, NickDecoration> newMap) {
-        DECORATIONS = (newMap == null) ? Collections.emptyMap() : Map.copyOf(newMap);
     }
 
     public static int size() {
