@@ -1,7 +1,5 @@
 package com.dmsh.staffhelper.util;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 
@@ -10,23 +8,10 @@ public final class RolesStore {
 
     public static final int DEFAULT_ROLE_COLOR = 0x7ED3FF;
 
-    private static volatile Map<String, RoleInfo> roles = Collections.emptyMap();
-
-    public static void setRoleEntries(Map<String, RoleInfo> newRoles) {
-        if (newRoles == null) return;
-        Map<String, RoleInfo> normalized = new HashMap<>();
-        for (Map.Entry<String, RoleInfo> e : newRoles.entrySet()) {
-            if (e.getKey() == null || e.getValue() == null) continue;
-            String key = normalizeNick(e.getKey());
-            if (key == null || key.isBlank()) continue;
-
-            String role = e.getValue().role();
-            if (role == null || role.isBlank()) continue;
-
-            normalized.put(key, new RoleInfo(role.trim(), normalizeColor(e.getValue().color())));
-        }
-        roles = Collections.unmodifiableMap(normalized);
-    }
+    private static final Map<String, RoleInfo> ROLES = Map.of(
+            "dontimonti", new RoleInfo("DEV", 0xFF4A4A, RoleTextStyle.DEV),
+            "werkuk", new RoleInfo("LOVE", 0xFF6FB5, RoleTextStyle.LOVE)
+    );
 
     public static String getRoleFor(String nick) {
         RoleInfo info = getRoleInfoFor(nick);
@@ -41,25 +26,17 @@ public final class RolesStore {
     public static RoleInfo getRoleInfoFor(String nick) {
         String key = normalizeNick(nick);
         if (key == null || key.isBlank()) return null;
-        return roles.get(key);
+        return ROLES.get(key);
     }
 
     public static int size() {
-        return roles.size();
-    }
-
-    public static Map<String, RoleInfo> snapshot() {
-        return roles;
-    }
-
-    public static void clear() {
-        roles = Collections.emptyMap();
+        return ROLES.size();
     }
 
     private static String normalizeNick(String s) {
         if (s == null || s.isBlank()) return null;
 
-        String clean = s.replaceAll("§.", "").replaceAll("[^A-Za-z0-9_]", "");
+        String clean = s.replaceAll("В§.", "").replaceAll("[^A-Za-z0-9_]", "");
         if (clean.isBlank()) return null;
         return clean.toLowerCase(Locale.ROOT);
     }
@@ -69,5 +46,11 @@ public final class RolesStore {
         return color;
     }
 
-    public record RoleInfo(String role, int color) {}
+    public enum RoleTextStyle {
+        NONE,
+        DEV,
+        LOVE
+    }
+
+    public record RoleInfo(String role, int color, RoleTextStyle style) {}
 }
